--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,8 +18,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "src"
   },
-  "include": ["src"],
-  "baseUrl": "src"
+  "include": ["src"]
 }
