--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
+    "@jukben/emoji-search": "^3.0.0",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
     "@mui/styled-engine-sc": "^6.0.1",
     "@mui/x-data-grid": "^7.21.0",
+    "@webscopeio/react-textarea-autocomplete": "^4.9.2",
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "react": "^18.3.1",
@@ -32,6 +35,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
+    "@types/webscopeio__react-textarea-autocomplete": "^4.7.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
